logs_old/c173184.p0.error
Traceback (most recent call last):
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/test.py", line 23, in <module>
    import models
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/__init__.py", line 1, in <module>
    from models.segmentor.zegclip import ZegCLIP, MultiScalesZegCLIP
  File "/mnt/fast/nobackup/users/ae01116/multi-modal-dissertation-uos/models/segmentor/zegclip.py", line 1061
    print("Visual feat 0 shape:", visual_feat[0][0].size())
    ^
SyntaxError: invalid syntax
